# databooks

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yaml  mkdocs.yml  pyproject.toml  sitemap.xml  versions.json
.github/: codecov.yml
.github/workflows/: docs.yml  publish.yml  test.yml  tests.yml
0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1/API/: index.html
0.0.1/CLI/: index.html
0.0.1/common/: index.html
0.0.1/conflicts/: index.html
0.0.1/contrib/: index.html
0.0.1/coverage/: covindex.html  d_9cf290e4769cb08c___init___py.html  d_9cf290e4769cb08c_cli_py.html  d_9cf290e4769cb08c_common_py.html  d_9cf290e4769cb08c_conflicts_py.html  d_9cf290e4769cb08c_git_utils_py.html  d_9cf290e4769cb08c_metadata_py.html  d_c9daea7fabbd95fb___init___py.html  d_c9daea7fabbd95fb_base_py.html  d_c9daea7fabbd95fb_notebook_py.html  index.html  status.json
0.0.1/git_utils/: index.html
0.0.1/license/: index.html
0.0.1/metadata/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.10/: 404.html  index.html  sitemap.xml
0.1.11/: 404.html  index.html  sitemap.xml
0.1.12/: 404.html  index.html  objects.inv  sitemap.xml
0.1.13/: 404.html  index.html  sitemap.xml
0.1.14/: 404.html  index.html  objects.inv  sitemap.xml
0.1.15/: 404.html  index.html  sitemap.xml
0.1.2/: 404.html  index.html  sitemap.xml
0.1.3/: 404.html  index.html  sitemap.xml
0.1.4/: 404.html  index.html  sitemap.xml
0.1.5/: 404.html  index.html  objects.inv  sitemap.xml
0.1.6/: 404.html  index.html  objects.inv  sitemap.xml
0.1.7/: 404.html  index.html  objects.inv  sitemap.xml
0.1.8/: 404.html  index.html  sitemap.xml
0.1.9/: 404.html  index.html  sitemap.xml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.1/: 404.html  index.html  objects.inv  sitemap.xml
1.0.2/: 404.html  index.html  sitemap.xml
1.0.3/: 404.html  index.html  sitemap.xml
1.0.4/: 404.html  index.html  sitemap.xml
1.0.5/: 404.html  index.html  objects.inv  sitemap.xml
1.0.6/: 404.html  index.html  sitemap.xml
1.1.0/: 404.html  index.html  sitemap.xml
1.1.1/: 404.html  index.html  sitemap.xml
1.2.0/: 404.html  index.html  objects.inv  sitemap.xml
1.2.1/: 404.html  index.html  objects.inv  sitemap.xml
1.2.2/: 404.html  index.html  objects.inv  sitemap.xml
1.2.3/: 404.html  index.html  objects.inv  sitemap.xml
1.2.4/: 404.html  index.html  sitemap.xml
1.2.5/: 404.html  index.html  sitemap.xml
1.2.6/: 404.html  index.html  objects.inv  sitemap.xml
1.2.7/: 404.html  index.html  sitemap.xml
1.2.8/: 404.html  index.html  sitemap.xml
1.2.9/: 404.html  index.html  sitemap.xml
1.3.0/: 404.html  index.html  objects.inv  sitemap.xml
1.3.1/: 404.html  index.html  sitemap.xml
1.3.10/: 404.html  index.html  objects.inv  sitemap.xml
1.3.2/: 404.html  index.html  sitemap.xml
1.3.3/: 404.html  index.html  sitemap.xml
1.3.4/: 404.html  index.html  sitemap.xml
1.3.5/: 404.html  index.html  sitemap.xml
1.3.6/: 404.html  index.html  sitemap.xml
1.3.7/: 404.html  index.html  sitemap.xml
1.3.8/: 404.html  index.html  objects.inv  sitemap.xml
1.3.9/: 404.html  index.html  sitemap.xml
API/: index.html
CLI/: index.html
common/: index.html
conflicts/: index.html
contrib/: index.html
coverage/: covindex.html  d_9cf290e4769cb08c___init___py.html  d_9cf290e4769cb08c_cli_py.html  d_9cf290e4769cb08c_common_py.html  d_9cf290e4769cb08c_conflicts_py.html  d_9cf290e4769cb08c_git_utils_py.html  d_9cf290e4769cb08c_metadata_py.html  d_c9daea7fabbd95fb___init___py.html  d_c9daea7fabbd95fb_base_py.html  d_c9daea7fabbd95fb_notebook_py.html  index.html
databooks/: __init__.py  __main__.py  affirm.py  assert.py  cli.py  common.py  config.py  conflicts.py  data_models.py  git_utils.py  logging.py  metadata.py  recipes.py  tui.py  version.py
docs/: API.md  CLI.md  affirm.md  alternatives.md  assert.md  common.md  config.md  conflicts.md  git_utils.md  logging.md  metadata.md  tui.md  usage.md
git_utils/: index.html
latest/: 404.html  index.html
license/: index.html
metadata/: index.html
nbhelp/: data_models.py
search/: search_index.json
tests/: test_affirm.py  test_cli.py  test_common.py  test_config.py  test_conflicts.py  test_data_models.py  test_git.py  test_git_utils.py  test_metadata.py  test_recipes.py  test_tui.py
(+1707 files in other folders)
