[tool.poetry]
name = "databooks"
version = "0.0.0-dev"  # dynamically set in CI
description = "A CLI tool to resolve git conflicts and remove metadata in notebooks."
authors = ["Murilo Cunha <murilo@dataroots.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://datarootsio.github.io/databooks/"
repository = "https://github.com/datarootsio/databooks/"
keywords = ["jupyter-notebooks", "cli"]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
databooks = "databooks.cli:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
rich = "^10.6.0"
pydantic = "^1.8.2"
GitPython = "^3.1.24"
tomli = "^0.2.6"


[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
pytest = "^6.2.4"
pytest-cov = "^3.0.0"
coverage = "^6.2"
typer-cli = "^0.0.12"
mypy = "^0.910"
mkdocstrings = "^0.16.2"
mkdocs-material = "^8.0.5"
mkdocs-autorefs = "^0.3.0"
mkdocs-coverage = "^0.2.4"
mike = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = "(databooks/|tests/)"

[tool.mypy]
files = ["databooks"]
disallow_untyped_calls = true
disallow_untyped_defs = true

[tool.isort]
skip_glob = ["docs/*"]
profile = "black"
multi_line_output = 3