[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "databooks"
version = "0.0.0-dev"
description = "A CLI tool to resolve git conflicts and remove metadata in notebooks."
authors = [
  { name = 'Murilo Cunha', email='murilo@dataroots.io' },
]
license = {file = 'LICENSE'}
keywords = ["jupyter-notebooks", "cli"]
requires-python = '>=3.7'
dependencies = [
    "typer >= 0.4.0,<1.0.0",
    "rich >= 12.6.0",
    "pydantic >= 1.8.2",
    "GitPython >= 3.1.24",
    "tomli >= 2.0.1",
    "typing-extensions >= 4.0.1"
]

[project.urls]
repository = "https://datarootsio.github.io/databooks/"

[project.scripts]
databooks = "databooks.cli:app"

[project.optional-dependencies]
dev = [
    "pre-commit >= 2.17.0",
    "pytest >= 7.2.0",
    "pytest-cov >= 3.0.0",
    "mike >= 1.1.2",
    "mkdocstrings >= 0.17.0",
    "mkdocs-material >= 8.0.5",
    "mkdocs-autorefs >= 0.3.1",
    "mkdocs-coverage >= 0.2.4",
    "Jinja2 == 3.0.3"
]

[options.packages.find]
exclude = ["tests*"]

[options.package_data]
databooks = ["py.typed"]

# Devtools not in environment, but used in `pre-commit`
[tool.black]
include = ["databooks/", "tests/"]
extend-exclude = "tests/files/"

[tool.mypy]
files = ["databooks", "tests"]
show_error_codes = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_no_return = false

[tool.isort]
skip_glob = ["docs/*"]
profile = "black"
